Eliminated code smells for tests
Simple reassignment hotfixes.